[Qt] Fix the build with the newes Qt5 hashes https://bugs.webkit.org/show_bug.cgi?id=76657

Patch by Andras Becsi <andras.becsi@nokia.com> on 2012-01-24
Reviewed by Simon Hausmann.

Source/WebCore:

No new tests needed.

* platform/graphics/cairo/OpenGLShims.cpp:
(WebCore::getProcAddress): Adopt API changes.

Tools:

* MiniBrowser/qt/MiniBrowserApplication.cpp:
(MiniBrowserApplication::MiniBrowserApplication): Disable the automatic touch->mouse event synthesis
for now to prevent an infinite loop where Qt always creates mouse events out of our touch mock events.

Canonical link: https://commits.webkit.org/93765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105733 268f45cc-cd09-0410-ab3c-d52691b4dbfc